AH-2007-08-31-0: Enhancem.: Added inactive test for -hold_jid_ad enhancement
                 Review:    CR

LP-2007-08-31-1: Bugfix.:   Fixed non-working LP-2007-08-31-0
                 Review:    LP

RD-2007-08-31-2: Bugfix:    fixed qmod_general test
                 Review:    JG

RD-2007-08-31-1: Bugfix:    fixed consumable_resources test
                 Review:    RH 

LP-2007-08-31-0: Enhancem.: JGDI junit tests are will be run only with 6.2 and
                            are currently disabled
                            JGDI qconf tests are disabled
                 Review:    AP

RD-2007-08-31-0: Bugfix:    fixed /clients/common/advance_reservation test
                            introduced by JG-2007-08-10-0
                 Review:    CR

RH-2007-08-30-0: Bugfix:    check for testing admin user management added
                 Issue:     106 (hedeby issue)
                 Review:    MB

CR-2007-08-29-1: Bugfix:    fixed another NFS timeout problem when installing
                            hedeby distribution
                 Review:    MB

CR-2007-08-29-0: Enhancem.: o added possibility to show additional cluster
                              configurations in menu item 26)
                 Review:    RD

CR-2007-08-28-1: Bugfix:    o fixed problem with deleting hedeby spool dir
                              introduced with CR-2007-08-28-0
                 Cleanup:   o removed not used global ts_config line
                 Review:    JG

CR-2007-08-28-0: Enhancem.: o new menu item: run shutdown hooks
                            o new hedeby config version: 1.2
                              (new parameter: preferences_mode)
                            o new testsuite hedeby system name without
                              underscore characters (see hedeby IZ# 72)
                            o fixed problem when try to delete hedeby
                              spool dir without root access