@@ -32,6 +32,8 @@
 #___INFO__MARK_END__
 
 lappend check_functions "qsub_wd"         ;# test the -wd <dir>/-cwd options
+lappend check_functions "check_qsub_ts_iz_145" ; # Testcase for TS IZ 145
+
 
 #****** qsub/qsub_wd() ******
 # 
@@ -90,3 +92,129 @@ proc qsub_wd {} {
    delete_job $hold_job1
    wait_for_end_of_all_jobs
 }
+	   
+
+#****** qsub/check_qsub_ts_iz_145() ***********************************************
+#  NAME
+#     check_qsub_ts_iz_145() -- Testcase for TS IZ 145.
+#
+#  SYNOPSIS
+#     1. Run qsub -t 1-100:100 -cwd sleep.sh
+#     2. Check that  the output file looks correct
+#        This file will be in the local dir, called
+#        sleep.sh.o<jobid>.1
+#     3 Repeat for qsub -t 1-95:100 -cwd sleep.sh
+#     4.Repeat for qsub -t 1-100:50 -cwd sleep.sh
+#        In this case, we have TWO output files,
+#        sleep.sh.o<jobid>.1 and sleep.sh.o<jobid>.51
+#     5. Repeat for qsub -t 1-100:50 -cwd sleep.sh
+#
+#  FUNCTION
+#     Check if TS IZ 145 has been fixed.
+#  INPUTS
+#
+#*******************************************************************************
+proc check_qsub_ts_iz_145 {} {
+   
+   # Call with -t 1-100:100
+   set SGE_TASK_FIRST 1
+   set SGE_TASK_LAST 100
+   set SGE_TASK_STEPSIZE 100
+   
+   qsub_ts_iz_145 $SGE_TASK_FIRST $SGE_TASK_LAST $SGE_TASK_STEPSIZE
+   
+   # Call with -t 1-95:100
+   set SGE_TASK_FIRST 1
+   set SGE_TASK_LAST 95
+   set SGE_TASK_STEPSIZE 100
+   
+   qsub_ts_iz_145 $SGE_TASK_FIRST $SGE_TASK_LAST $SGE_TASK_STEPSIZE
+   
+   # Call with -t 1-100:50
+   set SGE_TASK_FIRST 1
+   set SGE_TASK_LAST 100
+   set SGE_TASK_STEPSIZE 50
+   
+   qsub_ts_iz_145 $SGE_TASK_FIRST $SGE_TASK_LAST $SGE_TASK_STEPSIZE
+   
+   # Call with -t 1-95:50
+   set SGE_TASK_FIRST 1
+   set SGE_TASK_LAST 95
+   set SGE_TASK_STEPSIZE 50
+   
+   qsub_ts_iz_145 $SGE_TASK_FIRST $SGE_TASK_LAST $SGE_TASK_STEPSIZE
+   
+}
+
+proc qsub_ts_iz_145 { {t_sge_task_first "1"} {t_sge_task_last "4"}
+                      {t_sge_task_stepsize "4" } } {
+   global ts_config env                     
+   global CHECK_OUTPUT CHECK_USER CHECK_ACTUAL_TEST_PATH
+
+   set SGE_TASK_FIRST $t_sge_task_first
+   set SGE_TASK_LAST $t_sge_task_last
+   set SGE_TASK_STEPSIZE $t_sge_task_stepsize
+
+   set host $ts_config(master_host)
+   set output_tmpfile [get_tmp_file_name]
+
+   # Delete any remaining jobs
+   delete_all_jobs
+   
+	#1. First submit
+   submit_job "-t $SGE_TASK_FIRST-$SGE_TASK_LAST:$SGE_TASK_STEPSIZE -o $output_tmpfile -e /dev/null $CHECK_ACTUAL_TEST_PATH/step.sh" 1 30 "" $CHECK_USER
+      
+   # Now check that the job(s) were scheduled and by runnning "qstat -f"
+   # and displaying the output
+   
+   qstat_plain_parse qstat_plain_output1
+
+   puts $CHECK_OUTPUT "qstat array with -t $SGE_TASK_FIRST-$SGE_TASK_LAST:$SGE_TASK_STEPSIZE  .... \n"
+   parray qstat_plain_output1
+   
+   
+   # Sleep until the jobs run
+   sleep 10
+   
+   
+   set result [start_remote_prog $host $CHECK_USER cat $output_tmpfile exit_code]
+   #    echo first $SGE_TASK_FIRST last $SGE_TASK_LAST step $SGE_TASK_STEPSIZE
+   puts $CHECK_OUTPUT "result is \n $result \n"
+   
+   if {$exit_code != 0} {
+      add_proc_error "qsub_ts_iz_145" -1 "error reading from output file on host $host \n "
+      } else {
+         if {[scan $result "first  %d last %d step %d" sge_task_first sge_task_last sge_task_stepsize] != 3 } {
+            add_proc_error "qsub_ts_iz_145" -1 "error reading from output file on host $host \n "
+            } else {
+            # sge_task_first should be $SGE_TASK_FIRST 
+               if {$sge_task_first != $SGE_TASK_FIRST} {
+               add_proc_error "qsub_ts_iz_145" -1 "SGE_TASK_FIRST is incorrect host $host \n "
+                  } else {
+                  puts $CHECK_OUTPUT "SGE_TASK_FIRST is $sge_task_first \n"
+                  }
+            }
+               
+            # sge_task_last should be $SGE_TASK_LAST 
+            if {$sge_task_last != $SGE_TASK_LAST} {
+               add_proc_error "qsub_ts_iz_145" -1 "SGE_TASK_LAST is incorrect on host $host \n "
+               } else {
+               puts $CHECK_OUTPUT "SGE_TASK_LAST is $sge_task_last \n"
+               }
+       
+               
+            # sge_task_stepsize should be $SGE_TASK_STEPSIZE
+            if {$sge_task_stepsize != $SGE_TASK_STEPSIZE} {
+               add_proc_error "qsub_ts_iz_145" -1 "SGE_TASK_STEPSIZE is incorrect on host $host \n "
+               } else {
+               puts $CHECK_OUTPUT "SGE_TASK_STEPSIZE is $sge_task_stepsize \n"
+               }
+            }
+      
+      
+   
+   #clean up
+   
+   file delete $output_tmpfile
+   
+}   
