@@ -1,3 +1,6 @@
+OJ-2007-09-07-0: Enhancem.: Added testcase for IZ 145
+                 Review:    AH
+
 AH-2007-08-31-0: Enhancem.: Added inactive test for -hold_jid_ad enhancement
                  Review:    CR
 
